* make.adb (Add_Switch): Make Generic_Position a procedure.  The 	function approach did not work well because of a side effect (the 	function call could reallocate the table which was being indexed 	using its result). Fixes ada/4851.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48265 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-22  Florian Weimer  <fw@deneb.enyo.de>
+
+	* make.adb (Add_Switch): Make Generic_Position a procedure.  The
+	function approach did not work well because of a side effect (the
+	function call could reallocate the table which was being indexed
+	using its result). Fixes ada/4851.
+
 2001-12-19  Robert Dewar <dewar@gnat.com>
 
 	* bindgen.adb: Minor reformatting
