--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 Sat Dec 22 08:59:50 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
+	* expr.c (expand_expr, case ADDR_EXPR): Handling taking address of
+	SAVE_EXPR.
+	* function.c (gen_mem_addressof): Add missing tests for SAVE_EXPR.
+	(put_addressof_into_stack): Clarify code in setting of used_p.
+
 	* calls.c (flags_from_decl_or_type): Move ECF_SP_DEPRESSED here.
 	(expand_call): Delete from here.
 	Do pending stack adjustments if ECF_SP_DEPRESSED.
