* rtl.h (subreg_lsb): Declare. 	* rtlanal.c (subreg_lsb): Implement.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48272 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Sat Dec 22 12:20:20 EST 2001  John Wehle  (john@feith.com)
+
+	* rtl.h (subreg_lsb): Declare.
+	* rtlanal.c (subreg_lsb): Implement.
+
 Sat Dec 22 08:59:50 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* predict.c: Reformatting and minor cleanups.
