--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Dec 21 23:30:14 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* i386.h (TARGET_CPU_DEFAULT_pentium_mmx): New.
+	(TARGET_CPU_DEFAULT_*): Renumber.
+
 Sat Dec 22 12:20:20 EST 2001  John Wehle  (john@feith.com)
 
 	* rtl.h (subreg_lsb): Declare.
