--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2001-12-22  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* elxsi.c: Include "hard-reg-set.h" and/or don't declare
+	`call_used_regs' explicitly.
+	* i860.c: Likewise.
+	* m68k.c: Likewise.
+	* ns32k.c: Likewise.
+	* pa.c: Likewise.
+	* vax.c: Likewise.
+	* we32k.c: Likewise.
+
 Fri Dec 21 23:30:14 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* i386.h (TARGET_CPU_DEFAULT_pentium_mmx): New.
