* config.gcc (extra_headers): Move settings to math-68881.h and 	ppc-asm.h to common code for CPU types.  Use math-68881.h on all 	m68k targets. 	(header_files): Remove unused setting.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48277 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-22  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* config.gcc (extra_headers): Move settings to math-68881.h and
+	ppc-asm.h to common code for CPU types.  Use math-68881.h on all
+	m68k targets.
+	(header_files): Remove unused setting.
+
 2001-12-22  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* elxsi.c: Include "hard-reg-set.h" and/or don't declare
