--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-22  David Edelsohn  <edelsohn@gnu.org>
+
+	* loop.c (scan_loop, move_movables, count_one_set): Do not
+	overlook hard registers when computing statistics.
+
 Sun Dec 23 00:49:37 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* calls.c (ECF_LIBCALL_BLOCK): New constant.
