* gnat-style.texi (Declarations and Types): Remove ancient style 	rule which was mandated by code generation issues.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48286 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,8 @@
 2001-12-23  Florian Weimer  <fw@deneb.enyo.de>
 
+	* gnat-style.texi (Declarations and Types): Remove ancient style
+	rule which was mandated by code generation issues.
+	
 	* gnat-style.texi (header): Add @dircategory, @direntry.
 	(title page): Remove date.
 	(general) Add @./@: where approriate, and two spaces after the
