--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-23  Richard Henderson  <rth@redhat.com>
+
+	* calls.c (expand_call): Don't turn off ECF_LIBCALL_BLOCK for
+	an invalid result register; do end the sequence properly.
+	(emit_library_call_value_1): Likewise.
+
 2001-12-22  Aldy Hernandez  <aldyh@redhat.com>
 
         * config/rs6000/rs6000.h (rs6000_builtins): Add vsldoi variants.
