* 5nosinte.ads: Get definition of "int" from Interfaces.C.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48288 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-23  Richard Henderson  <rth@redhat.com>
+
+	* 5nosinte.ads: Get definition of "int" from Interfaces.C.
+
 2001-12-23  Florian Weimer  <fw@deneb.enyo.de>
 
 	* gnat-style.texi (Declarations and Types): Remove ancient style
