--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* decl2.c (lang_f_options): Const-ify.
+
 2001-12-20  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* config-lang.in (diff_excludes): Remove.
