--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-23  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.c-torture/execute/20011223-1.c: New test.
+
 2001-12-21  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/wtr-aggr-init-1.c: Test that __extension__ disables then
