--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-23  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.md (UNSPEC_SIBCALL): New.
+	(sibcall, sibcall_value, sibcall_osf_1_er, sibcall_osf_1): Use it.
+	(sibcall_value_osf_1_er, sibcall_value_osf_1): Likewise.
+
 2001-12-23  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* c-typeck.c (c_start_case): Don't strip conversions from the
