--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2001-12-23  Richard Henderson  <rth@redhat.com>
 
+	* config/alpha/alpha.c (call_operand) [OSF]: Disallow virtual regs.
+
 	* config/alpha/alpha.md (UNSPEC_SIBCALL): New.
 	(sibcall, sibcall_value, sibcall_osf_1_er, sibcall_osf_1): Use it.
 	(sibcall_value_osf_1_er, sibcall_value_osf_1): Likewise.
