--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-23  Richard Henderson  <rth@redhat.com>
 
+	* stmt.c (resolve_operand_names): Handle operand modifiers.
+
+2001-12-23  Richard Henderson  <rth@redhat.com>
+
 	* stmt.c (parse_input_constraint): Break out from ...
 	(expand_asm_operands): ... here.  Loop over the operands twice,
 	the first time only calling mark_addressable.  Correct and simplify
