--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-23  Richard Henderson  <rth@redhat.com>
 
+	* gcc.dg/asm-4.c: Test operand modifiers.
+
+2001-12-23  Richard Henderson  <rth@redhat.com>
+
 	* gcc.c-torture/execute/20011219-1.c (main): Make "i" a long.
 
 2001-12-23  Joseph S. Myers  <jsm28@cam.ac.uk>
