--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-24  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/20011223-1.c: New.
+	* gcc.dg/inline-1.c: New.
+
 2001-12-23  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/asm-4.c: Test operand modifiers.
