--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-24  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/160
+	* typeck.c (build_modify_expr): Remove old unreachable code & tidy
+	up. Don't stabilize_references when initializing a reference.
+
 2001-12-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* decl2.c (lang_f_options): Const-ify.
