--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Dec 25 12:04:47 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* dwarf2out.c: Reformatting and minor code rearrangement.
+
 2001-12-24  Douglas B. Rupp (rupp@gnat.com)
 
 	* configure.in (quoted_stage_prefix_set_by_configure): Generate.
