--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -13030,15 +13030,19 @@
 }")
 
 (define_insn "indirect_jumpsi"
-  [(set (pc) (match_operand:SI 0 "register_operand" "cl"))]
+  [(set (pc) (match_operand:SI 0 "register_operand" "c,*l"))]
   "TARGET_32BIT"
-  "b%T0"
+  "@
+   bctr
+   {br|blr}"
   [(set_attr "type" "jmpreg")])
 
 (define_insn "indirect_jumpdi"
-  [(set (pc) (match_operand:DI 0 "register_operand" "cl"))]
+  [(set (pc) (match_operand:DI 0 "register_operand" "c,*l"))]
   "TARGET_64BIT"
-  "b%T0"
+  "@
+   bctr
+   blr"
   [(set_attr "type" "jmpreg")])
 
 ;; Table jump for switch statements:
